# PolicyBotAI

./: main.py  pyproject.toml
dataset/: hr_policies.csv  new_row_ingestion.csv  processed_policies.csv
dataset_preprocess/: preprocess.ipynb
src/: api.py  chain.py  chat.py  embeddings.py  ingest.py  llm.py  memory.py  prompt.py
src/frontened/: webApp.py
src/pydantic_schema/: schema.py
src/retrievers/: chroma_metadata_filter.py  hybrid_retriever.py  metadata_filter_retriever.py  mmr_retriever.py  multiquery_retriever.py
utils/: logger.py
