[project]
name = "policybotai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pandas>=3.0.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
